<resources>
    <string name="app_name">GetAppProspero</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Bottom menu buttons-->
    <string name="text_costs">Расходы</string>
    <string name="text_budget">Бюджет</string>
    <string name="text_history">История</string>
    <string name="test_places">Места</string>
    <string name="text_profile">Профиль</string>
    <string name="title_activity_map_activity">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>
